# CTLesion2MNI152

./: .gitignore  CT2MNI152Affine.py  CTtools.py  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/ct2mni152/: ct_to_mni152.py  ct_tools.py  main.py
src/ct_lesion_to_mni152/: ct_tools.py  registration_workflow.py
src/ct_lesion_to_mni152.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ct_lesion_to_mni152/data/: __init__.py
src/ventricle_removal/: v_removal_workflow.py
src/ventricle_removal/data/: __init__.py
