[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ct2mni152"
version = "0.0.1"
description = "AgeML is a Python package for Age Modelling with Machine Learning made easy."
authors = ["Po-Yu Kao", "Iñigo Tellaetxe Elorriaga"]
readme = "README.md"
repository = "https://github.com/itellaetxe/ct2mni152"
license = "MIT"
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{include = "ct2mni152", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.24"
scikit-image = "^0.22.0"
SimpleITK = "^2.3.0"
scipy = "^1.9.0"


[tool.poetry.dev-dependencies]
# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"

[tool.poetry.scripts]
ct2mni152 = "ct2mni152.main:main"


