[build-system]
requires = [
    "setuptools >= 66",
    "wheel",
    "setuptools_scm >= 6.4",
]

build-backend = "setuptools.build_meta"

[project]
name = "ct_lesion_to_mni152"
requires-python = ">=3.9"
version = "0.0.1"
authors = [
    {name = "Iñigo Tellaetxe Elorriaga"}, {email = "inigotellaetxe@gmail.com"},
    {name = "Antonio Jimenez-Marin"}, {email = "antoniojm.compneuro@gmail.com"}	
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # common dependencies
    "importlib-metadata == 7.1.0",
    "numpy == 1.26.4",
    "scikit-image == 0.22.0",
    "scipy > 1.9.0",
    "pandas == 2.2.2",
    "itk == 5.4.0",
    "itk-elastix == 0.20.0",
    "nibabel == 5.2.1",
    "nilearn == 0.10.4",
    "matplotlib == 3.9.1",
]

[project.scripts]
ct_lesion_to_mni152 = "ct_lesion_to_mni152.registration_workflow:main"
ventricle_removal = "ventricle_removal.v_removal_workflow:main"

